# ovd

./: .gitignore  .gitmodules  RELEASE-NOTES.txt  TODO  VERSION
AdminConsole/classes/: AbstractObject.class.php  Application.class.php  ApplicationsGroup.class.php  ConfigElement.class.php  ConfigElement_boolean.class.php  ConfigElement_dictionary.class.php  ConfigElement_input.class.php  ConfigElement_inputlist.class.php  ConfigElement_list.class.php  ConfigElement_multiselect.class.php  ConfigElement_password.class.php  ConfigElement_select.class.php  ConfigElement_sliders_loadbalancing.class.php  ConfigElement_text.class.php  ConfigElement_textarea.class.php  ConfigElement_week_time_select.class.php  Configuration_mode.class.php  Configuration_mode_ad.class.php  Configuration_mode_internal.class.php  Configuration_mode_ldap.class.php  Configuration_mode_novell.class.php  Makefile.am  NetworkFolder.class.php  News.class.php  Preferences_admin.class.php  Script.class.php  Server.class.php  ServerReport.class.php  Session.class.php  SessionManager.class.php  SessionReport.class.php  SharedFolder.class.php  UsersGroupsList.class.php  UsersList.class.php
AdminConsole/config/: .gitignore  Makefile.am  apache2.conf.in  config.inc.php.in  ovd-administration-console-config.in
AdminConsole/includes/: .gitignore  Makefile.am  core-minimal.inc.php  core.inc.php  defaults.inc.php.in  functions.inc.php  ovd-admin.wsdl  page_template.php  page_template_static.php  template_server.inc.php  webapp.inc.php
AdminConsole/web/: Makefile.am  action-reporting.php  actions.php  applications.php  applications_static.php  applications_webapp.php  appsgroup.php  certificate.php  checkup.php  configuration-partial.php  configuration-profile.php  configuration-sumup.php  configuration.php  error.php  index.php  licensing.php  login.php  logout.php  logs.php  mimetypes.php  news.php  password.php  profiles.php  publications.php  reporting.php  script.php  servers.php  serversgroup.php  session-reporting.php  sessions.php  sharedfolders.php  summary.php  sumup.php  tasks.php  users.php  usersgroup.php  wizard.php
AdminConsole/web/ajax/: Makefile.am  installable_applications.php
AdminConsole/web/classes/: ConfigElement.class.php  ConfigElement_input.class.php  ConfigElement_list.class.php  ConfigElement_multiselect.class.php  ConfigElement_password.class.php  ConfigElement_select.class.php  Task.class.php  (+12 more)
ApplicationServer/: Makefile.am  autogen  autogen.sh  configure.in.in  ovd-application-server.rhel.spec.in  ovd-application-server.spec.in  ovd-application-server.suse.spec.in
ApplicationServer/OvdShells/: MANIFEST.in  Makefile.am  OvdDesktop  OvdRemoteApp  OvdRemoteApps  autogen  autogen.py  autogen.sh  setup.py  setup.py.in  startovdapp
ApplicationServer/XrdpApi/: Session.py  Vchannel.py  __init__.py
ApplicationServer/config/: Makefile.am  apache2.conf.in  dot.htaccess
ApplicationServer/daemon/: Makefile  Makefile.am  README  application.sh  del_user.sh  desktop.sh  functions.sh  log.sh  modules_fs.sh  prestart.sh  set_user_env.sh  startsession.sh  timeout.sh  ulteo-ovd.conf  ulteo-ovd.init  ulteo-ovd.init.in  ulteo-ovdd  unset_user_env.sh  uumount.sh  windows.sh  xml2desktopfile
ApplicationServer/desktop/: Makefile.am  autogen  autogen.sh  configure.ac.in  configure.ac.in2
ApplicationServer/examples/: Makefile.am  ulteo-as.logrotate  ulteo-ovd.init
ApplicationServer/po/: LINGUAS  Makefile.am  POTFILES.in  ar.po  de.po  es.po  fr.po  id.po  it.po  ja.po  nl.po  pt_BR.po  ru.po  uovdaps.pot  zh_CN.po
ApplicationServer/scripts/: Makefile.am  aps-chroot-install.1  aps-chroot-install.in  as-chroot-install.1  as-chroot-install.in  ovdchroot.8  ovdchroot.in
ApplicationServer/tools/: Makefile.am  aps-chroot-install.8  aps-chroot-install.8.in  aps-chroot-install.in  aps-chroot.8  aps-chroot.8.in
ApplicationServer/web/: Makefile.am  README  access.php  applet.php  apps.php  exit.php  icon.php  index.php  invite.php  print.php  start.php  start_app.php  startsession.php  suspend.php  whatsup.php
SessionManager/: .gitignore  Makefile.am  README  TODO  autogen  autogen.sh  configure.ac  configure.ac.in  configure.in.in  ovd-session-manager.rhel.spec.in  ovd-session-manager.spec.in  ovd-session-manager.suse.spec.in
SessionManager/config/: .gitignore  Makefile.am  apache2-admin.conf.in  apache2-vhost-server.conf.in  apache2-vhost-ssl.conf  apache2.conf.in  config.inc.php.in  cron.php.in  sessionmanager.cron.in
SessionManager/examples/: Makefile.am  examplePlugin.inc.php  ulteo-sm.logrotate
SessionManager/extra/: Makefile.am
SessionManager/ha/: Makefile.am  README  install.sh  su_cmd.sh  ulteo_ha  utils.sh
SessionManager/po/: ChangeLog  LINGUAS  Makefile.am  POTFILES.in  ar.po  de.po  en.po  es.po  fr.po  id.po  it.po  ja.po  nl.po  pt_BR.po  ru.po  zh_CN.po
SessionManager/scripts/: .gitignore  Makefile.am  sm-admin.1.in  sm-admin.8  sm-admin.in  sm-config.1.in  sm-config.8.in  sm-config.in
SessionManager/src/: footer.php  login.php  startsession.php
SessionManager/web/: Makefile.am  README  applications.php  check.php  footer.php  header.php  icon.php  index.php  invite.php  startsession.php  webdav.php
WebInterface/config/: Makefile.am  apache2.conf.in  config.inc.php  webinterface.conf.php.in
WebInterface/web/: Makefile.am  apps.php  icon.php  index.php  launch.php  logout.php  news.php  servers.php  session_status.php  synchronize.php
chroot-apps/: Makefile.am  autogen  autogen.sh  configure.in.in
chroot-apps/cups2all/: README
chroot-apps/desktopfiles2xml/: Makefile.am  desktop-files2xml
chroot-apps/lmessage/: Makefile  Makefile.am  lmessage.1  main.c
chroot-apps/po/: POTFILES.in  fr.po
chroot-apps/restricted-menu/: image.c  s-menu.c
chroot-apps/start-ovd/: Makefile.am  startovd-xfce.in  startovdapp  xinitrc
chroot-apps/xfsm-compat/: xfsm-compat-gnome.c  xfsm-compat-gnome.h
chroot-utils/xfce4-restricted-menu-plugin-0.0.2/: Makefile.am  TODO  config.h.in  configure.in
utils/cups2all/: Makefile.am  autogen  autogen.sh  configure.ac.in  cups2all
(+4427 files in other folders)
