scripts_DATA = AbstractObject.class.php  \
               Application.class.php \
               ApplicationsGroup.class.php \
               ConfigElement.class.php \
               ConfigElement_dictionary.class.php \
               ConfigElement_input.class.php \
               ConfigElement_inputlist.class.php \
               ConfigElement_list.class.php \
               ConfigElement_multiselect.class.php \
               ConfigElement_password.class.php \
               ConfigElement_select.class.php \
               ConfigElement_sliders_loadbalancing.class.php \
               ConfigElement_textarea.class.php \
               ConfigElement_text.class.php \
               Configuration_mode_ad.class.php \
               Configuration_mode.class.php \
               Configuration_mode_internal.class.php \
               Configuration_mode_ldap.class.php \
               Configuration_mode_novell.class.php \
               NetworkFolder.class.php \
               News.class.php \
               Preferences_admin.class.php \
               SharedFolder.class.php \
               Server.class.php \
               ServerReport.class.php \
               Session.class.php \
               SessionManager.class.php \
               SessionReport.class.php \
               Task.class.php \
               User.class.php \
               UserProfile.class.php \
               UsersGroup.class.php \
               UsersList.class.php \
               UsersGroupsList.class.php

scriptsdir = $(datadir)/ulteo/administration_console/classes

EXTRA_DIST = $(scripts_DATA)
