# Copyright (C) 2008-2014 Ulteo SAS
# http://www.ulteo.com
# Author Gauvain POCENTEK <gauvain@linutop.com> 2008-2009
# Author Jeremy DESVAGES <jeremy@ulteo.com> 2009-2010
# Author Julien LANGLOIS <julien@ulteo.com> 2009, 2013
# Author Laurent CLOUET <laurent@ulteo.com> 2009
# Author Samuel BOVEE <samuel@ulteo.com> 2010
# Author David PHAM-VAN <d.pham-van@ulteo.com> 2014
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; version 2
# of the License
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

SUBDIRS = ajax media tools

scripts_DATA = actions.php \
               action-reporting.php \
               applications.php \
               applications_static.php \
               applications_webapp.php \
               appsgroup.php \
               checkup.php \
               configuration.php \
               configuration-partial.php \
               configuration-profile.php \
               configuration-sumup.php \
               error.php \
               index.php \
               certificate.php \
               login.php \
               logout.php \
               logs.php \
               mimetypes.php \
               news.php \
               password.php \
               profiles.php \
               publications.php \
               reporting.php \
               script.php \
               servers.php \
               serversgroup.php \
               sharedfolders.php \
               session-reporting.php \
               sessions.php \
               summary.php \
               sumup.php \
               tasks.php \
               users.php \
               usersgroup.php \
               wizard.php

scriptsdir = $(datadir)/ulteo/administration_console/web

DIST_SUBDIRS=$(SUBDIRS)
EXTRA_DIST = $(scripts_DATA)
