SUBDIRS = admin \
          classes \
          client \
          events \
          includes \
          media \
          modules \
          PEAR \
          plugins \
          webservices

scripts_DATA = check.php \
               startsession.php \
               webdav.php

scriptsdir = $(datadir)/ulteo/sessionmanager

EXTRA_DIST = $(scripts_DATA) README
