SUBDIRS = ajax webservices media plugins modules \
          admin applet includes classes \
		  PEAR events

scripts_DATA = footer.php header.php \
               startsession.php index.php \
               applications.php icon.php \
               check.php webdav.php

scriptsdir = $(datadir)/ulteo/sessionmanager

EXTRA_DIST = $(scripts_DATA) README
