SUBDIRS = admin \
          classes \
          client \
          events \
          includes \
          modules \
          PEAR \
          plugins \
          webservices

scripts_DATA = startsession.php \
               webdav.php

scriptsdir = $(datadir)/ulteo/sessionmanager

EXTRA_DIST = $(scripts_DATA) README
