SUBDIRS = ajax applet includes media

scripts_DATA = apps.php \
               icon.php \
               index.php \
               launch.php \
               logout.php \
               servers.php \
               session_status.php

scriptsdir = $(datadir)/ulteo/webinterface

EXTRA_DIST = $(scripts_DATA)
