SUBDIRS = ajax applet includes media

scripts_DATA = apps.php \
               icon.php \
               index.php \
               launch.php \
               logout.php \
               news.php \
               servers.php \
               session_status.php \
               synchronize.php

scriptsdir = $(datadir)/ulteo/webinterface

EXTRA_DIST = $(scripts_DATA)
