# Copyright (C) 2010 Ulteo SAS
# http://www.ulteo.com
# Author Samuel BOVEE <samuel@ulteo.com> 2010
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; version 2
# of the License
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

cups2all_DATA = cups2all
cups2alldir = $(CUPSSERVERBIN)/backend

conf_DATA = cups2all.conf
confdir = $(CUPSSERVERROOT)

ppd_DATA = PostscriptColor.ppd
ppddir = $(CUPSDATADIR)

EXTRA_DIST = \
	$(cups2all_DATA) $(conf_DATA) $(ppd_DATA) \
	README INSTALL NEWS AUTHORS ChangeLog COPYING
