SUBDIRS = Platform.Linux

scripts_DATA = Application.py \
               CheckFork.py \
               __init__.py \
               InstancesManager.py \
               Module.py \
               Monitoring.py \
               OvdAppChannel.py \
               VirtualChannel.py

scriptsdir = $(prefix)/lib/python2.5/site-packages/ovd_shells

EXTRA_DIST = $(scripts_DATA)
