scripts_DATA = apt.sh \
		   application.sh \
           cache.sh \
		   display.sh \
		   menu.sh \
		   sessions.sh \
		   spool.sh \
		   tmp.sh \
		   user.sh \
		   utils.sh \
		   webservices.sh \
		   windows.sh \
		vapp.sh

scriptsdir = $(datadir)/ulteo-ovd/functions.d

EXTRA_DIST = $(scripts_DATA)
