plymouthpict_DATA = \
	password_field.png \
	progress_dot_off.png \
	progress_dot_on.png \
	ulteo-logo.png
plymouthpictdir = $(libdir)/plymouth/themes/ulteo-logo/

pixmaps_DATA = ulteo-menu-logo-hover.png ulteo-menu-logo.png
pixmapsdir = $(datarootdir)/pixmaps

wallpapers_DATA = ulteo-od-wallpaper.png
wallpapersdir = $(datarootdir)/wallpapers

EXTRA_DIST = \
	$(pixmaps_DATA) \
	$(plymouthpict_DATA) \
	$(wallpapers_DATA)
